/*
 * Copyright © 2017-2020 factcast.org
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
package org.factcast.client.grpc.cli.conv;

import java.io.File;

import org.factcast.core.util.FactCastJson;

import lombok.SneakyThrows;

public class ExistingJsonFile extends File {

    private static final long serialVersionUID = 1L;

    public ExistingJsonFile(String pathname) {
        super(pathname);
        if (!exists()) {
            throw new IllegalArgumentException(getAbsolutePath() + " does not exist");
        }
        if (isDirectory()) {
            throw new IllegalArgumentException(getAbsolutePath() + " is a directory");
        }
        if (!canRead()) {
            throw new IllegalArgumentException(getAbsolutePath() + " cannot be read");
        }
    }

    @SneakyThrows
    public String read() {
        return FactCastJson.readJSON(this);
    }
}
