@startuml

title __FACTCAST-CLIENT-GRPC-CLI's Class Diagram__\n

  namespace org.factcast.client.grpc.cli {
    class org.factcast.client.grpc.cli.CLI {
    }
  }
  

  namespace org.factcast.client.grpc.cli {
    namespace cmd {
      class org.factcast.client.grpc.cli.cmd.Catchup {
      }
    }
  }
  

  namespace org.factcast.client.grpc.cli {
    namespace cmd {
      class org.factcast.client.grpc.cli.cmd.EnumerateNamespaces {
      }
    }
  }
  

  namespace org.factcast.client.grpc.cli {
    namespace cmd {
      class org.factcast.client.grpc.cli.cmd.EnumerateTypes {
      }
    }
  }
  

  namespace org.factcast.client.grpc.cli {
    namespace cmd {
      class org.factcast.client.grpc.cli.cmd.Follow {
      }
    }
  }
  

  namespace org.factcast.client.grpc.cli {
    namespace cmd {
      class org.factcast.client.grpc.cli.cmd.Publish {
      }
    }
  }
  

  namespace org.factcast.client.grpc.cli {
    namespace cmd {
      class org.factcast.client.grpc.cli.cmd.SerialOf {
      }
    }
  }
  

  namespace org.factcast.client.grpc.cli {
    namespace conv {
      class org.factcast.client.grpc.cli.conv.Converters {
      }
    }
  }
  

  namespace org.factcast.client.grpc.cli {
    namespace conv {
      class org.factcast.client.grpc.cli.conv.ExistingJsonFile {
      }
    }
  }
  

  namespace org.factcast.client.grpc.cli {
    namespace util {
      interface org.factcast.client.grpc.cli.util.Command {
      }
    }
  }
  

  namespace org.factcast.client.grpc.cli {
    namespace util {
      class org.factcast.client.grpc.cli.util.ConsoleFactObserver {
      }
    }
  }
  

  namespace org.factcast.client.grpc.cli {
    namespace util {
      class org.factcast.client.grpc.cli.util.FactRenderer {
      }
    }
  }
  

  namespace org.factcast.client.grpc.cli {
    namespace util {
      class org.factcast.client.grpc.cli.util.Options {
      }
    }
  }
  

  namespace org.factcast.client.grpc.cli {
    namespace util {
      class org.factcast.client.grpc.cli.util.Parser {
      }
    }
  }
  

  org.factcast.client.grpc.cli.cmd.Catchup .up.|> org.factcast.client.grpc.cli.util.Command
  org.factcast.client.grpc.cli.cmd.EnumerateNamespaces .up.|> org.factcast.client.grpc.cli.util.Command
  org.factcast.client.grpc.cli.cmd.EnumerateTypes .up.|> org.factcast.client.grpc.cli.util.Command
  org.factcast.client.grpc.cli.cmd.Follow .up.|> org.factcast.client.grpc.cli.util.Command
  org.factcast.client.grpc.cli.cmd.Publish .up.|> org.factcast.client.grpc.cli.util.Command
  org.factcast.client.grpc.cli.cmd.Publish o-- org.factcast.client.grpc.cli.conv.ExistingJsonFile : headerFile
  org.factcast.client.grpc.cli.cmd.Publish o-- org.factcast.client.grpc.cli.conv.ExistingJsonFile : payloadFile
  org.factcast.client.grpc.cli.cmd.SerialOf .up.|> org.factcast.client.grpc.cli.util.Command
  org.factcast.client.grpc.cli.conv.ExistingJsonFile -up-|> java.io.File
  org.factcast.client.grpc.cli.util.ConsoleFactObserver .up.|> org.factcast.core.subscription.observer.FactObserver
  org.factcast.client.grpc.cli.util.ConsoleFactObserver o-- org.factcast.client.grpc.cli.util.FactRenderer : factRenderer
  org.factcast.client.grpc.cli.util.FactRenderer o-- org.factcast.client.grpc.cli.util.Options : options
  org.factcast.client.grpc.cli.util.Parser o-- org.factcast.client.grpc.cli.util.Options : options


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
